--- a/FacebookStuff/views/profile.ejs
+++ b/FacebookStuff/views/profile.ejs
@@ -10,6 +10,40 @@
     </style>
 </head>
 <body>
+<script type="text/javascript" src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js'></script>
+<script type="text/javascript">
+	$.getJSON( '/getPosts', function( data ) {
+		var headers = '';
+        headers += '<th> Name </th>';
+		headers += '<th> Category </th>';
+		headers += '<th> Message </th>';
+		headers += '<th> Picture </th>';
+		headers += '<th> Link </th>';
+		headers += '<th> Type </th>';
+		headers += '<th> CreatedTime </th>';		
+		headers += '<th> Score </th>';
+		var tableContent = '';
+		// For each item in our JSON, add a table row and cells to the content string
+		$.each(data.Posts, function(){
+			tableContent += '<tr>';
+			tableContent += '<td>' + this.Name + '</td>';
+            tableContent += '<td>' + this.Category + '</td>';
+            tableContent += '<td>' + this.Message + '</td>';
+            tableContent += '<td>' + this.Picture + '</td>';
+            tableContent += '<td>' + this.Link + '</td>';
+            tableContent += '<td>' + this.Type + '</td>';
+            tableContent += '<td>' + this.CreatedTime + '</td>';
+            tableContent += '<td>' + this.Score + '</td>';
+			tableContent += '</tr>';
+		});
+        
+        // Inject the whole content string into our existing HTML table
+        $('#postsList table tbody').html(tableContent);
+        $('#postsList table thead').html(headers);
+	});
+	
+</script>
+
 <div class="container">
 
     <div class="page-header text-center">
@@ -25,9 +59,15 @@
                 <h3 class="text-primary"><span class="fa fa-facebook"></span> Facebook</h3>
 
                     <p>
-						WKWKEWKEKWEKWKWKEKWEKWKEWLEWKELWEK
+						Posts Here...
                     </p>
-
+					<br>
+                    <div id="postsList">
+					   <table>
+                          <thead>
+						  <tbody>
+					   </table>
+                    </div>
             </div>
         </div>
 
