Post formatting improved
added checkbox for selecting user types in index

--- a/FacebookStuff/views/index.ejs
+++ b/FacebookStuff/views/index.ejs
@@ -18,7 +18,14 @@
         <p>Login or Register with:</p>
 
         <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
-
+		
+		<form action="" align="left">
+			<font size="5">Please tick any of the following that apply to you</font><br>
+			<input type="checkbox" name="userType" value="Socialite"> I am a Socialite: <font size="2">Socialites enjoy seeing posts and Facebook activity of their friends, the closer the better!</font><br>
+			<input type="checkbox" name="userType" value="News Reader"> I am a News Reader: <font size="2">News Readers, you guessed it; enjoy reading news and media statuses and links</font><br>
+			<input type="checkbox" name="userType" value="Follower"> I am a Follower: <font size="2">Followers enjoy receiving updates from all kinds of companies and organisations</font><br>
+		</form>
+		
     </div>
 
 </div>
