--- a/FacebookStuff/views/profile.ejs
+++ b/FacebookStuff/views/profile.ejs
@@ -19,14 +19,20 @@ $(document).ready(function() {
 		// For each item in our JSON, add a table row and cells to the content string
 		$.each(data.posts, function(){
 			listContent += '<div align="center" style="background-color:white; padding:5px">';
-			listContent += '<font size="2" style="padding:0px">' + this.Action + '</font><br>';
+			if (this.Action != 'undefined') {
+				listContent += '<font size="2" style="padding:0px">' + this.Action + '</font><br>';
+			}
 			listContent += '<font size="6" style="padding:0px">' + this.Name + '</font><br>';
 			listContent += '<font size="1">' + this.CreatedTime + '</font><br><br>';
-            listContent += '<font size="2">' + this.Message + '</font><br>';
+			if (this.Message != 'undefined') {
+				listContent += '<font size="2">' + this.Message + '</font><br>';
+			}
 			if (this.Type.indexOf("video") > -1) {			
 				listContent += '<video controls source src="' + this.Source + '" type="video/mp4">Your browser does not support the video tag.</video><br><a href="' + this.Link + '">Link to post</a>'
 			}else {
-				listContent += '<img src="' + this.Picture + '"><br><a href="' + this.Link + '">Link to post</a>';	
+				if (this.Picture != 'undefined') {
+					listContent += '<img src="' + this.Picture + '"><br><a href="' + this.Link + '">Link to post</a><br>';
+				}
 			}
 			listContent += '<font size="2">Score: ' + this.Score + '</font><br>';
 			listContent += '</div>';
