--- a/FacebookStuff/views/index.ejs
+++ b/FacebookStuff/views/index.ejs
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Node Authentication</title>
+    <title>Personalised Facebook Feed</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
     <style>
@@ -13,18 +13,14 @@
 <div class="container">
 
     <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span> Node Authentication</h1>
-
-        <p>Login or Register with:</p>
-
-        <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
+        <h1><span class="fa fa-lock"></span> Facebook Authentication</h1>
 		
-		<form action="/setType" align="left">
+		<form method="get" action="/setType" align="center">
 			<font size="5">Please tick any of the following that apply to you</font><br>
 			<input type="checkbox" name="userType" value="Socialite"> I am a Socialite: <font size="2">Socialites enjoy seeing posts and Facebook activity of their friends, the closer the better!</font><br>
 			<input type="checkbox" name="userType" value="News Reader"> I am a News Reader: <font size="2">News Readers, you guessed it; enjoy reading news and media statuses and links</font><br>
-			<input type="checkbox" name="userType" value="Follower"> I am a Follower: <font size="2">Followers enjoy receiving updates from all kinds of companies and organisations</font><br>
-			<input type="submit" value="Set User Types">
+			<input type="checkbox" name="userType" value="Follower"> I am a Follower: <font size="2">Followers enjoy receiving updates from companies and organisations that they are following</font><br>
+			<input type="submit" value="Login with Facebook" class="btn btn-primary">
 		</form>
 		
     </div>
